# blueos-doris

./: Doris Setup instructions.txt
.cursor/rules/: doris-hardware-ops.mdc
.github/workflows/: deploy.yml
extension/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
extension/backend/: README.md  entrypoint.sh  pyproject.toml
extension/backend/frames/: doris.json
extension/backend/scripts/: artemis_svl.py  doris.lua
extension/backend/src/doris/: __init__.py  config.py  main.py
extension/backend/src/doris/models/: __init__.py  configuration.py  dive_history.py  media.py  missions.py  network.py  notifications.py  sensors.py  system.py
extension/backend/src/doris/routes/: __init__.py  blueos.py  dive.py  frame.py  logs.py  media.py  missions.py  network.py  recorder.py  sensors.py  system.py
extension/backend/src/doris/services/: __init__.py  artemis.py  barometer.py  base.py  camera.py  dive.py  external_storage.py  frame.py  ip_camera_recorder.py  lights.py  mcap_telemetry.py  mdns.py  network.py  notifications.py  persistent_log.py  sensors.py  storage.py  system.py  timesync.py  tracker.py  usb_storage.py  wifi_driver.py
extension/backend/src/doris/services/blueos/network/: client.py  v2.py
extension/backend/tests/: __init__.py  test_models.py
extension/driver/: DRIVER_VERSION
extension/frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
extension/frontend/src/: App.vue  main.ts  parseBackendTime.ts
extension/frontend/src/components/: AllMissions.vue  ArtemisFlash.vue  (+12 more)
scripts/: deploy_doris_blueos.py
(+4 files in other folders)
