[project]
name = "doris-backend"
version = "0.1.0"
description = "DORIS (Deep Ocean Research and Imaging System) BlueOS Extension Backend"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Patrick José Pereira", email = "patrickelectric@gmail.com" }
]
keywords = ["blueos", "extension", "ocean", "research", "imaging"]

dependencies = [
    "robyn>=0.64.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "uvloop>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
doris = "doris.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/doris"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

